assets/css/stylesheet.css
html,
body {
    max-width: 100%;
    max-height: 100%;
    overflow-x: hidden;
    box-sizing: border-box;
    margin: 0;
}

* {
    box-sizing: inherit;
}

/* Header and Nav bar */
header {
    display: flex;
    justify-content: space-between;
}

header h1 {
    color: #1f1f1f;
    font-family: 'Ubuntu', sans-serif;
    clear: both;
    display: inline-block;
    margin-top: 10px;
    padding: 10px;
}

.nav-bar {
    color: #1f1f1f;
    font-size: 120%;
    font-family: 'Ubuntu', sans-serif;
    letter-spacing: 4px;
    margin-top: 0px;
    display: flex;

}

.nav-links {
    display: flex;
    flex-direction: row-reverse;
    margin-right: 30px;
    margin-bottom: 30px;
    list-style-type: none;

}

.nav-links li {
    margin: 10px;
    display: inline-block;
    width: fit-content;
}

.nav-bar a {
    color: inherit;
    text-decoration: none;
}

.nav-bar a:hover {
    color: red;
}

.home {
    border-bottom: #1f1f1f solid;
}

/* Header image and overlay text PS1 page */

.header-outer {
    width: 100%;
    background: url(/assets/images/playstation-logo-dark.jpeg);
    height: 550px;
    background-position: center 75%;
    animation-name: ps-zoom;
    animation-duration: 3s;
    animation-fill-mode: forwards;
    text-align: center;
    color: white;
    margin-bottom: 30px;
}

.intro-overlay {
    position: absolute;
    bottom: 200px;
    left: 200px;
    font-family: 'Ubuntu', sans-serif;
}

@keyframes ps-zoom {
    from {
        transform: scale(1);
    }

    to {
        transform: scale(1.1);
    }
}

.intro-overlay p,
.intro-overlay h2 {
    color: #ffffff;
}

/* PS1,PS3,PS4 Styling */
.container-ps1-ps3-ps4 {
    display: flex;
    flex-wrap: nowrap;
    flex-direction: row;
    justify-content: space-between;
    padding: 30px;
    margin-bottom: 20px;
    width: auto;
    height: auto;
}

.container-ps1-ps3-ps4 p {
    color: inherit;
}

.container-ps1-ps3-ps4 p:hover {
    color: red;
}

.container-ps2-ps5 p {
    color: inherit;
}

.container-ps2-ps5 p:hover {
    color: red;
}

.ps1-ps3-ps4-info {
    text-align: left;
    width: 40%;
    font-family: 'Ubuntu', sans-serif;
    border: navy 4px solid;
    border-radius: 50px;
    padding: 20px;
    height: fit-content;
}

.ps1-ps3-ps4-logo {
    display: inline-flex;
    flex-direction: row;
    width: 50%;
}

.ps1-ps3-ps4-logo img {
    width: auto;
    height: auto;
    display: block;
    animation-name: ps-zoom;
    animation-duration: 3s;
    animation-fill-mode: forwards;
    overflow: hidden;
}

/*Best Games Section Styling all consoles */
.best-selling-header {
    background-color: navy;
    font-family: 'Ubuntu', sans-serif;
    background-color: navy;
    color: white;
    margin: 0;
    padding: 15px;
}

.best-selling-games {
    display: inline-flex;
    flex-direction: row;
    justify-content: space-between;
    font-family: 'Ubuntu', sans-serif;
    background-color: navy;
    color: white;
    margin: 0;
    padding: 30px;
    font-style: italic;
}

.game {
    text-align: center;
    width: 30%;
}

.game img {
    width: 40%;
}

.game img:hover {
    animation-name: ps-zoom;
    animation-duration: 5s;
    animation-fill-mode: forwards;
}

/* Footer Styling */

footer {
    background-color: black;
    display: block;
    color: white;
    font-family: 'Ubuntu', sans-serif;
}

/* Newsletter Styling */

.newsletter {
    text-align: center;
    padding: 30px;
}

.newsletter span {
    display: inline-block;
    width: 80px;
}

.newsletter h3 {
    padding: 10px;
}

.sign-up-button {
    background-color: yellow;
}

/* Social Links */
.social-links {
    text-align: center;
    text-decoration-style: none;
    letter-spacing: 20px;
}

.social-links li {
    display: inline;
    color: inherit;
}

.social-links :hover {
    color: #ffffff;
}

.copyright {
    font-size: 15px;
    text-align: center;
}

/* PS2 & PS5 Styling */

.container-ps2-ps5 {
    display: flex;
    flex-wrap: nowrap;
    flex-direction: row-reverse;
    justify-content: space-evenly;
    padding: 30px;
    margin-bottom: 20px;
}

.ps2-ps5-info {
    text-align: left;
    width: 40%;
    font-family: 'Ubuntu', sans-serif;
    border: navy 4px solid;
    border-radius: 50px;
    padding: 30px;
    height: fit-content;
}

.ps2-ps5-logo {
    display: inline-flex;
    flex-direction: row;
    width: 50%;

}

.ps2-ps5-logo img {
    width: auto;
    height: auto;
    animation-name: ps-zoom;
    animation-duration: 3s;
    animation-fill-mode: forwards;
}

/* Media Queries */

@media screen and (max-width:1650px) {
    .header-outer {
        background-position: right 50%;
    }

    .intro-overlay {
        position: absolute;
        bottom: 250px;
        right: 175px;
        text-align: center;
    }

    .nav-bar {
        width: auto;
        height: auto;
    }

    header {
        width: auto;
        height: auto;
        display: flex;
        flex-direction: column;
    }

    .container-ps1-ps3-ps4 {
        width: auto;
        height: auto;
        margin: 0 auto;
        padding: 30px;
        display: flex;
        flex-direction: column;
    }

    .ps1-ps3-ps4-info {
        width: auto;
        height: auto;
        padding: 30px;
        margin: 50px;
    }

    .ps1-ps3-ps4-logo {
        display: flex;
        flex-direction: column;
        width: auto;
        height: auto;
        margin: 50px;
    }

    .container-ps2-ps5 {
        width: auto;
        height: auto;
        margin: 0 auto;
        padding: 30px;
        display: flex;
        flex-direction: column;
    }

    .ps2-ps5-info {
        width: auto;
        height: auto;
        padding: 30px;
        margin: 50px;
    }

    .ps2-ps5-logo {
        display: flex;
        flex-direction: column;
        width: auto;
        height: auto;
        margin: 50px;
    }
}

@media screen and (max-width:750px) {
    .best-selling-games {
        flex-direction: column;

    }

    .game {
        width: 100%;
    }


}

@media screen and (max-width:550px) {
    header {
        font-size: small;
    }

    .header-outer {
        background-position: center 75%;
    }

    .intro-overlay {
        position: absolute;
        bottom: 150px;
        right: 180px;
        text-align: center;
        font-size: small;
    }

}

@media screen and (max-width:475px) {
    header {
        font-size: x-small;
        margin: 30px;
    }

    .header-outer {
        width: 100%;
    }

    .intro-overlay {
        position: absolute;
        right: 170px;
        bottom: 170px;
        text-align: center;
        font-size: small;
    }

    .ps1-ps3-ps4-info {
        width: 100%;
        margin: 0;
    }

    .ps2-ps5-info {
        width: 100%;
        margin: 0;
    }
}

